--- a/FAQ.html
+++ b/FAQ.html
@@ -127,7 +127,7 @@
 		    Q7: Do we have to use the given format of the hamiltonian of hydroxyl?
 		  </h5>
 		  <p>
-		    A7: No, you do not have to. But you need to only use the hamiltonian of hydroxyl with Jordan-Wigner mapping (which should give you 12 qubits and 631 pauli terms), you can feel free to use any related tool to generate different description styles of this hamiltonian, but please included your format of described hamiltonian in the source code.
+		    A7: No, you do not have to. But you need to only use the hamiltonian of hydroxyl with Jordan-Wigner mapping (which should give you 12 qubits and 631 pauli terms), you are allowed to use any related tool to generate different description styles of this hamiltonian, but please include your format of described hamiltonian in both the source code and self-reflection.
 		  </p>
         </div>            
       </div>
