--- a/Problems.html
+++ b/Problems.html
@@ -92,14 +92,15 @@
             1.Introduction
           </h5>
           <p>
-            The vast and intricate world of drug discovery has always been on the frontier of technological advancements. 
-            As we navigate the complex molecular interactions underlying medical therapies, there's an increasing emphasis on computational techniques to aid our endeavors.
-            The recent rise of quantum computing offers a promising avenue to revolutionize drug discovery, offering potential solutions to problems previously considered insurmountable using classical computation [1].
-            <br><br>
-            One such fundamental entity in the realm of pharmacology is the <b>hydroxyl radical (·OH)</b>. Known for its significant role in various physiological and pathological processes, 
-            the hydroxyl radical is not just a simple molecule but a pivot around which many drug interactions revolve. 
-            This highly reactive species plays a role in oxidative stress, leading to numerous diseases such as neurodegenerative disorders, cardiovascular diseases, and even cancers. 
-            It is also a core component of many drug compounds, contributing to their therapeutic effects.
+          <p>The rapid evolution of drug discovery is continuously fueled by cutting-edge technologies, 
+          especially in understanding complex molecular interactions pivotal to medical therapies. Among the tools deployed, computational methods have garnered significant attention, 
+          with <b>machine learning techniques</b> emerging as a key player in deciphering intricate patterns and optimizing solutions. 
+          <b>Quantum computing</b>, when assisted by machine learning techniques, has the potential to redefine drug discovery. It not only presents an opportunity to solve challenges deemed impossible for classical computers but also enhances our ability to predict and understand molecular behaviors with unprecedented accuracy [1].</p>
+
+          <br>
+
+          <p>A critical molecule in the pharmacological landscape is the <b>hydroxyl radical (·OH)</b>. This radical is more than just a molecular entity; it's a central axis for numerous drug interactions. Its high reactivity is linked to oxidative stress, resulting in a range of health conditions, from neurodegenerative disorders and cardiovascular diseases to cancers. 
+            Beyond its pathogenic roles, the hydroxyl radical is also integral to the efficacy of many drugs. With the development of quantum computing, we can potentially achieve a deeper understanding of the interactions and effects of molecules like the hydroxyl radical, accelerating breakthroughs in therapeutic developments.</p>
           </p>
           <p>
             Given its prominence, understanding the quantum mechanics of the hydroxyl radical  at an intricate level can significantly impact drug discovery processes. 
