--- a/Problems.html
+++ b/Problems.html
@@ -109,7 +109,7 @@
             Its relatively smaller size offers a feasible task for current quantum computing capabilities, making it an ideal candidate for a quantum simulation challenge, and more importantly, paving the way towards the future research landscape that large scale is a fundamental need.
           </p>
           <p>
-            <img border="0" src="Figures/hydroxyl radical3D.png" width="200" height="200">
+            <img border="0" src="Figures/Hydroxyl3D.png" width="200" height="200">
             <img border="0" src="Figures/VQC.PNG" width="500" height="200">
           </p>
           <h5>
