--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <a href="https://www.sigda.org/"><img border="0" src="Figures/sigda_acm_logo.png" width="90" height="90"></a>
             </div>
             <div class="col-sm">
-              <a href="https://dorahacks.io/"><img border="0" src="Figures/dora.png" width="220" height="90"></a>
+              <a href="https://dorahacks.io/"><img border="0" src="Figures/dorahacks.png" width="220" height="90"></a>
             </div>
           </div>
           <br>
