--- a/Problems.html
+++ b/Problems.html
@@ -119,7 +119,7 @@
           <p>
             We ask participants to design and implement a working, open-source protocol that can automatically calcualte the ground state energy of the <b>hydroxyl radical (·OH)</b> from the give 
             hamiltonian. We allow the participants to freely explore the design space, with some guidlines below. Participants can propose good qubits mapping strategy by codesign by hardware and software;
-            classical shadow can be potentially implemented to reduce the shots on observable to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framwork
+            pauli string grouping and other joint measurement strategies can be potentially implemented to reduce the shots on observable to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framwork
             could give a good ansatz for better performance; AI/ML or scientific-based error mitigation can also helps for better performance; last but not least, the experience of optimizer, initial
             paramter or initial scaling of the parameter are important topic for this challenge.
           </p>
