--- a/Problems.html
+++ b/Problems.html
@@ -66,7 +66,7 @@
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2023 QC for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
+                <h2><a class="nav-link" href="/">2023 Quantum Computing for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
 <!--               </li> -->
 </div>
 <!--               <li class="nav-item"> -->
@@ -208,7 +208,7 @@
       
     </div>
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE QC for Drug Discovery Challenge at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE Quantum Computing for Drug Discovery Challenge at ICCAD. All Rights Reserved.
     </div>
     
     <!-- jQuery CDN - Slim version (=without AJAX) -->
