--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <!--               </li> -->
 <!--               <li class="nav-item" style="margin:auto"> -->
             <div>
-                <h2><a class="nav-link" href="/">2023 QC for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
+                <h2><a class="nav-link" href="/">2023 Quantum Computing for Drug Discovery Challenge at ICCAD<span class="sr-only">(current)</span></a></h2>
 <!--               </li> -->
 </div>
 <!--               <li class="nav-item"> -->
@@ -191,7 +191,7 @@
     </div>
     
     <div class="card-footer text-muted text-center">
-      Copyright © ACM/IEEE QC for Drug Discovery Challenge at ICCAD. All Rights Reserved.
+      Copyright © ACM/IEEE Quantum Computing for Drug Discovery Challenge at ICCAD. All Rights Reserved.
     </div>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
