--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <li><b>Zhiding Liang</b> (University of Notre Dame, IN, US)</li>
             <li><b>Di Wu</b> (University of Central Florida, FL, US)</li>
             <li><b>Xiaowei Xu</b> (Guangdong Provincial People's Hospital, CN)</li>
-            <li><b>Weiwen Jiang</b> (George Mason University, US)</li>
+            <li><b>Weiwen Jiang</b> (George Mason University, VA, US)</li>
             <li><b>Yiyu Shi</b> (University of Notre Dame, IN, US)</li>
           </ul>
           <br>
