--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <b>1st Place Award</b>
             </div>
             <div>
-              US $2000 / team
+              US $2500 / team
             </div>
           </div>
           <div class="row">
@@ -181,6 +181,9 @@
             </div>
             <div class="col-sm">
               <a href="https://dorahacks.io/"><img border="0" src="Figures/dora.png" width="90" height="90"></a>
+            </div>
+            <div class="col-sm">
+              <a href="https://www.jpmorgan.com/technology/applied-research"><img border="0" src="Figures/jpmc.png" width="350" height="50"></a>
             </div>
           </div>
           <br>
