--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
           
           <h3>Contest Organizers</h3>
           <ul class="list-unstyled">
-            <li><b>Zhiding Liang</b> (University of Notre Dame, IN, US)</li>
+            <li><b>Zhiding Liang</b> (University of Notre Dame, IN, US; JPMorgan Chase & Co, US)</li>
             <li><b>Di Wu</b> (University of Central Florida, FL, US)</li>
             <li><b>Xiaowei Xu</b> (Guangdong Provincial People's Hospital, CN)</li>
+            <li><b>Zichang He</b> (JPMorgan Chase & Co, US)</li>
             <li><b>Weiwen Jiang</b> (George Mason University, VA, US)</li>
             <li><b>Yiyu Shi</b> (University of Notre Dame, IN, US)</li>
           </ul>
@@ -183,7 +184,7 @@
               <a href="https://dorahacks.io/"><img border="0" src="Figures/dora.png" width="90" height="90"></a>
             </div>
             <div class="col-sm">
-              <a href="https://www.jpmorgan.com/technology/applied-research"><img border="0" src="Figures/jpmc.png" width="350" height="25"></a>
+              <a href="https://www.jpmorgan.com/technology/applied-research"><img border="0" src="Figures/jpmc1.png" width="350" height="90"></a>
             </div>
           </div>
           <br>
