--- a/Problems.html
+++ b/Problems.html
@@ -152,6 +152,7 @@
             In the contemporary realm of quantum computing, noise poses a significant challenge [4].  
             As such, we urge all participants to consider the inherent noise when designing their quantum algorithms or circuits. 
             Qiskit [3] offers tools that facilitate the simulation of quantum algorithms or circuits as if executed on an actual quantum device, complete with the associated noise. 
+            Since not everyone have access on real machine, for fairness, we require all participants training the model on a given noise model which will released on the registration deadline date.
             Simulating a quantum system, complemented with a noise model, is imperative to gain insights into the potential performance of quantum algorithms on current NISQ (Noisy Intermediate-Scale Quantum) devices [4]. 
             We acknowledge that while participants might be inclined to optimize basis gates at the pulse level to curtail the duration of the quantum circuit and thereby conserve quantum resources [5], 
             characterizing a time-dependent noise model from a real quantum machine poses unsolved obstacles in preparation for this quantum computing for drug discovery challenge. We regretfully must resort to using the standard gate-based noise model for evaluating circuits. 
