--- a/Problems.html
+++ b/Problems.html
@@ -117,11 +117,11 @@
             The goal of the 2023 Challenge is to calculate the ground state energy of the hydroxyl radical (·OH).
           </p>
           <p>
-            We ask participants to design and implement a working, open-source protocol that can automatically calcualte the ground state energy of the <b>hydroxyl radical (·OH)</b> from the give 
-            hamiltonian. We allow the participants to freely explore the design space, with some guidlines below. Participants can propose good qubits mapping strategy by codesign by hardware and software;
-            pauli string grouping and other joint measurement strategies can be potentially implemented to reduce the shots on observable to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framwork
-            could give a good ansatz for better performance; AI/ML or scientific-based error mitigation can also helps for better performance; last but not least, the experience of optimizer, initial
-            paramter or initial scaling of the parameter are important topic for this challenge.
+            We ask participants to design and implement a working, open-source protocol that can automatically calculate the ground state energy of the <b>hydroxyl radical (·OH)</b> from the given
+hamiltonian. We allow the participants to freely explore the design space, with some guidelines below. Participants can propose a good qubit mapping strategy by codesigning hardware and software;
+Pauli string grouping and other joint measurement strategies can be potentially implemented to reduce the shots on observables to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framework
+could give a good ansatz for better performance; AI/ML or scientific-based error mitigation can also help for better performance. Last but not least, the experience of the optimizer's initial
+parameter or initial scaling of the parameter are important topics for this challenge.
           </p>
           <h5>
             3.Data
