--- a/Problems.html
+++ b/Problems.html
@@ -166,9 +166,9 @@ parameter or initial scaling of the parameter are important topics for this chal
 		    6.Scoring
 		  </h5>
 		  <p>
-			  We will employ specific metrics to evaluate the submitted algorithms. The assessment encompasses the accuracy in estimating the ground state energy, 
-        the consumption of quantum resources (number of shots and duration of the quantum circuit), and the demand on classical computational resources (number of iterations and number of parameters). Specifically, the precision of the ground state energy estimation accounts for maximum 100 credts, the consumption of quantum resources represents maximum 25 credits, 
-        and the demand on classical computational resources contributes maximum 15 credits. And we require participants to self-reflect their techniques for maximum 10 points, which should include the tricks implemented in the preprocessing process, and to submit a short description of their used techniques. We will have three graders evaluate and do this extra 10 credits grading based on self-reflect score and other aspects including novelty, reasonability, and so on. 
+        We will employ specific metrics to evaluate the submitted algorithms. The assessment encompasses the accuracy of estimating the ground state energy,
+        the consumption of quantum resources (number of shots and duration of the quantum circuit) and the demand on classical computational resources (number of iterations and number of parameters). Specifically, the precision of the ground state energy estimation accounts for a maximum of 100 credits, the consumption of quantum resources represents a maximum of 25 credits,
+        and the demand on classical computational resources contributes a maximum of 15 credits. And we require participants to self-reflect on their techniques for a maximum of 10 points, which should include the tricks implemented in the preprocessing process, and to submit a short description of their used techniques. We will have three graders evaluate and grade this extra 10 credits based on self-reflect score and other aspects, including novelty, reasonability, and so on.
 		  </p> 
 		  <h5>
 		    7.Example Code
