--- a/Submission.html
+++ b/Submission.html
@@ -121,9 +121,9 @@
             <p>
                 <strong>Proceed to submission using the link below.</strong>
             </p>
-            <a href="#">Submission Link</a>
-        </div>
-        
+            <a href="https://forms.gle/Ubm6shK7eXoAA7SV6">Submission Link</a>
+        </div>         
+      </div>
       
     </div>
     <div class="card-footer text-muted text-center">
