--- a/News.html
+++ b/News.html
@@ -120,7 +120,6 @@
                 The Scoring of Problem is updated.
               </div>
             </div>
-            </div>
             <div class="row">
               <div class="col-4">
                 <b>Sep 8, 2023</b>
@@ -128,6 +127,15 @@
               <div class="col-8">
                 The noise model and system model is released.
               </div>
+            </div>
+          <div class="row">
+            <div class="col-4">
+              <b>Sep 9, 2023</b>
+            </div>
+            <div class="col-8">
+              The submission link is released.
+            </div>
+          </div>
 			<!-- <div class="row">
 			  <div class="col-4">
 			    <b>July 30, 2022</b>
