--- a/Submission.html
+++ b/Submission.html
@@ -95,10 +95,10 @@
             </p>
             <h4>2. Circuit Design & Parameters</h4>
             <p>
-                - Provide the optimized circuit structure and its corresponding optimal parameters.<br>
+                - Provide the optimized circuits structure and the corresponding optimal parameters (Three circuits in total for three different noise models provided in <a href="https://github.com/qccontest/QC-Contest-Demo/tree/main/NoiseModel">Noise Model</a>).<br>
                 - Participants may utilize any platform for circuit design. However, the finalized circuit must:<br>
                 &emsp;• Be rendered in `QASM` format.<br>
-                &emsp;• Represent a transpiled circuit.
+                &emsp;• Represent a transpiled circuit based on the give system model described in <a href="https://github.com/qccontest/QC-Contest-Demo/blob/main/NoiseModel_and_SystemModel.ipynb">System Model</a>.
             </p>
             <h4>3. Optimization Techniques & Framework</h4>
             <p>
