--- a/Problems.html
+++ b/Problems.html
@@ -173,7 +173,7 @@ parameter or initial scaling of the parameter are important topics for this chal
         <p>
             The accuracy of estimating the ground state energy is vital. This will be measured using the following formula:
             <br>
-            <i>E<sub>score</sub> = (E<sub>estimated</sub>/E<sub>ideal</sub>) × 100</i>
+            <i>E<sub>score</sub> = (1 - | (E<sub>estimated</sub> - E<sub>ideal</sub>) / E<sub>ideal</sub> |) × 100%</i>
             <br>
             Where, <i>E<sub>estimated</sub></i> represents the average result procured from the participant's framework across ten disparate seeds, while <i>E<sub>ideal</sub></i> is the objective value ascertained using classical computational methodologies. This precision component garners up to 100 credits.
         </p>
