--- a/Problems.html
+++ b/Problems.html
@@ -97,13 +97,13 @@
           with <b>machine learning techniques</b> emerging as a key player in deciphering intricate patterns and optimizing solutions. 
           <b>Quantum computing</b>, when assisted by machine learning techniques, has the potential to redefine drug discovery. It not only presents an opportunity to solve challenges deemed impossible for classical computers but also enhances our ability to predict and understand molecular behaviors with unprecedented accuracy [1].</p>
 
-          <p>A critical molecule in the pharmacological landscape is the <b>hydroxyl radical (·OH)</b>. This radical is more than just a molecular entity; it's a central axis for numerous drug interactions. Its high reactivity is linked to oxidative stress, resulting in a range of health conditions, from neurodegenerative disorders and cardiovascular diseases to cancers. 
-            Beyond its pathogenic roles, the hydroxyl radical is also integral to the efficacy of many drugs. With the development of quantum computing, we can potentially achieve a deeper understanding of the interactions and effects of molecules like the hydroxyl radical, accelerating breakthroughs in therapeutic developments.</p>
+          <p>A critical molecule in the pharmacological landscape is the <b>hydroxyl cation (·OH)</b>. This cation is more than just a molecular entity; it's a central axis for numerous drug interactions. Its high reactivity is linked to oxidative stress, resulting in a range of health conditions, from neurodegenerative disorders and cardiovascular diseases to cancers. 
+            Beyond its pathogenic roles, the hydroxyl cation is also integral to the efficacy of many drugs. With the development of quantum computing, we can potentially achieve a deeper understanding of the interactions and effects of molecules like the hydroxyl cation, accelerating breakthroughs in therapeutic developments.</p>
           </p>
           <p>
-            Given its prominence, understanding the quantum mechanics of the hydroxyl radical  at an intricate level can significantly impact drug discovery processes. 
-            A fundamental starting point is the accurate determination of its ground state energy. This knowledge can serve as a cornerstone, upon which more complex drug-radical interactions can be built. 
-            However, the quantum realm is notoriously challenging. With the current limitations in qubit numbers and quantum error rates, comprehensive simulations of larger drug molecules remain a distant goal. This is where the elegance of the hydroxyl radical comes into play. 
+            Given its prominence, understanding the quantum mechanics of the hydroxyl cation  at an intricate level can significantly impact drug discovery processes. 
+            A fundamental starting point is the accurate determination of its ground state energy. This knowledge can serve as a cornerstone, upon which more complex drug-cation interactions can be built. 
+            However, the quantum realm is notoriously challenging. With the current limitations in qubit numbers and quantum error rates, comprehensive simulations of larger drug molecules remain a distant goal. This is where the elegance of the hydroxyl cation comes into play. 
             Its relatively smaller size offers a feasible task for current quantum computing capabilities, making it an ideal candidate for a quantum simulation challenge, and more importantly, paving the way towards the future research landscape that large scale is a fundamental need.
           </p>
           <p>
@@ -114,10 +114,10 @@
             2.Objective
           </h5>
           <p>
-            The goal of the 2023 Challenge is to calculate the ground state energy of the hydroxyl radical (·OH).
+            The goal of the 2023 Challenge is to calculate the ground state energy of the hydroxyl cation (·OH).
           </p>
           <p>
-            We ask participants to design and implement a working, open-source protocol that can automatically calculate the ground state energy of the <b>hydroxyl radical (·OH)</b> from the given
+            We ask participants to design and implement a working, open-source protocol that can automatically calculate the ground state energy of the <b>hydroxyl cation (·OH)</b> from the given
 hamiltonian. We allow the participants to freely explore the design space, with some guidelines below. Participants can propose a good qubit mapping strategy by codesigning hardware and software;
 Pauli string grouping and other joint measurement strategies can be potentially implemented to reduce the shots on observables to save the cost on quantum resources; AI/ML or scientific-based circuit architecture search framework
 could give a good ansatz for better performance; AI/ML or scientific-based error mitigation can also help for better performance. Last but not least, the experience of the optimizer's initial
@@ -127,9 +127,9 @@ parameter or initial scaling of the parameter are important topics for this chal
             3.Data
           </h5>
           <p>
-            The data provided for this challenge revolves around the central theme of drug discovery, focusing on the fundamental quantum mechanics of the hydroxyl radical (·OH). 
-            As a pivotal entity in numerous drug interactions and physiological processes, an intricate understanding of the hydroxyl radical is crucial. 
-            To aid participants in this endeavor, we've curated a specialized dataset tailored to encapsulate the of the hydroxyl radical's hamiltonian.
+            The data provided for this challenge revolves around the central theme of drug discovery, focusing on the fundamental quantum mechanics of the hydroxyl cation (·OH). 
+            As a pivotal entity in numerous drug interactions and physiological processes, an intricate understanding of the hydroxyl cation is crucial. 
+            To aid participants in this endeavor, we've curated a specialized dataset tailored to encapsulate the of the hydroxyl cation's hamiltonian.
 
 			      We have provided the <a href="https://github.com/qccontest/QC-Contest-Demo/tree/main/Hamiltonian"> the hamiltonian </a> for reference.
           </p>
@@ -137,8 +137,8 @@ parameter or initial scaling of the parameter are important topics for this chal
 		    4.Data Format
 		  </h5>
 		  <p>
-		    All data is formatted in text. The text file contains the Pauli strings and corresponding coefficiencies of the hydroxyl radical's hamiltonian by Jordan-Wigner mapping [2]. 
-        Participants can generate different format of the description of the hydroxyl radical's hamiltonian by prefered tools, but we restricted the fermionic mapping method should be the Jordan-Wigner mapping [2],
+		    All data is formatted in text. The text file contains the Pauli strings and corresponding coefficiencies of the hydroxyl cation's hamiltonian by Jordan-Wigner mapping [2]. 
+        Participants can generate different format of the description of the hydroxyl cation's hamiltonian by prefered tools, but we restricted the fermionic mapping method should be the Jordan-Wigner mapping [2],
         which should be 12 qubits and 631 pauli strings.
 		  </p>
 
